# ITGC_SAP_HANA_APP

./: .env.example  .gitignore  README.md  generate_controls_template.py  pyproject.toml  requirements.txt
data/input/: sample_users.txt
data/knowledge_base/: compensating_controls.yaml  controls_catalog.json
data/output/: sample_users_validation_report.xlsx  sample_users_דוח_בדיקות.xlsx
src/: config.py  main.py  pipeline.py
src/models/: validation_result.py
src/persistence/: controls_catalog_loader.py  controls_metadata_loader.py  ui_state_repository.py
src/readers/: __init__.py  excel_reader.py  sap_transport_reader.py  text_reader.py
src/reporting/: excel_report.py  working_paper_report.py
src/services/: ai_prompts.py  ai_service.py  audit_service.py  compensating_advisor.py  compensating_kb_loader.py  findings_narrator.py  hana_service.py  user_anomaly_detector.py  user_preview_service.py  user_review_service.py
src/ui/: __init__.py  desktop_app.py
src/validators/: engine.py  intake_rules.py  spec_rules.py
tests/: test_smoke.py
