[project]
name = "itgc-sap-hana-app"
version = "0.1.0"
description = "Initial MVP for Excel/TXT intake and integrity checks"
requires-python = ">=3.10"
dependencies = [
	"openpyxl==3.1.5",
	"PySide6==6.11.0",
	"pywin32>=306; platform_system == 'Windows'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
