[project]
name = "itgc-sap-hana-app"
version = "0.1.0"
description = "Initial MVP for Excel/TXT intake and integrity checks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"openpyxl==3.1.5",
	"PySide6==6.11.0",
	"pywin32>=306; platform_system == 'Windows'",
	"httpx>=0.27",
	"pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
	"ruff>=0.8.0",
	"black>=24.10.0",
]
test = [
	"pytest>=8.3.0",
	"pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
